# pyEIT

./: .code2pdf  .flake8  .gitignore  .travis.yml  LICENSE.md  LICENSE.txt  README.md  Readme.md  Untitled.ipynb  environment.yml  mypy.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  pyeit.yml
JKR/: confocal_1.py  forward2d_1.py  forward2d_2.py  forward2d_3.py  forward3d_1.py  forward3d_2.py  forward3d_2_kp.py  gen_sample_multiple_bead.py  inverse2d_1.py  inverse2d_2.py  inverse2d_3.py  inverse2d_4.py  inverse2d_4_Minerva_20um_bead.py  inverse2d_5_Minerva_20um_bead.py  inverse2d_5b_Minerva_20um_bead.py  inverse2d_5c_Minerva_20um_bead.py  inverse2d_5d_Minerva_20um_bead.py  inverse2d_5f_Minerva_20um_bead.py  inverse2d_6a_Minerva_biofilm.py  inverse2d_6b_Minerva_biofilm.py  inverse2d_7a_Minerva_biofilm.py  inverse2d_7b_Minerva_biofilm.py  inverse2d_7c_Minerva_biofilm.py  inverse2d_ring_1.py  minerva_output2.txt  minerva_output3.txt  minerva_output4.txt  sensitivity2d_1.py
KP/Autoencoder/: main.py  model.py  preprocess.py
app/dielectric/: Readme.md  demo_timeit.py
data_gen/: data_gen2d.py  data_gen3d.py
demo/: demo_distmesh2d.py  demo_distmesh3d.py  demo_dynamic_bp.py  demo_dynamic_greit.py  demo_dynamic_jac.py  demo_dynamic_jac3d.py  demo_dynamic_stack.py  demo_forward2d.py  demo_forward3d.py  demo_mesh2d.py  demo_multi_shell.py  demo_static_jac.py  eit2016b.py
examples/: demo_distmesh2d.py  demo_distmesh3d.py  demo_dynamic_bp.py  demo_dynamic_greit.py  demo_dynamic_jac.py  demo_dynamic_jac3d.py  demo_dynamic_stack.py  demo_dynamic_svd.py  demo_forward2d.py  demo_forward3d.py  demo_mesh2d.py  demo_meshpy2d.py  demo_multi_shell.py  demo_sensitivity2d.py  demo_static_jac.py  eit2016b.py  eit_dynamic_bp.py  eit_dynamic_greit.py  eit_dynamic_jac.py  eit_dynamic_jac3d.py  eit_dynamic_stack.py  eit_dynamic_svd.py  eit_external_mesh.py  eit_io_et3.py  eit_sensitivity2d.py  eit_static_GN_3D.py  eit_static_jac.py  eit_system_performance_simulated.py  fem_forward2d.py  fem_forward3d.py  figures_of_merit_range.py  figures_of_merit_single.py  merit.py  mesh_distmesh2d.py  mesh_distmesh3d.py  mesh_intro2d.py  mesh_multi_shell.py  paper_eit2016b.py
examples/example_data/: imdl.stl  imdm.stl
examples/softx/: figure01.py  figure02.py  figure02b.py  figure03.py
model/: DLS2.mes
pyeit/: __init__.py
pyeit/app/: Readme.md  __init__.py  brain_sens.py  mes_sensitivity2d.py  plot.py
pyeit/eit/: .gitignore  Readme.md  __init__.py  base.py  bp.py  fem.py  greit.py  howto.py  interp2d.py  jac.py  pde.py  protocol.py  render.py  svd.py  utils.py
pyeit/feature_extraction/: __init__.py  dynamic_eit.py  mesh_geometry.py  static_r.py  transfer_impedance.py
pyeit/io/: __init__.py  daeger_eit.py  et3.py  et4.py  (+7 more)
tests/: run_examples.py  test_eit.py  test_eit_system.py  test_fem.py  test_load_mesh.py  test_merit.py  test_mesh.py  test_render.py  test_set_electrodes.py  test_simple.py  unittest_fem.py
(+56 files in other folders)
