# copied from https://github.com/adrienverge/yamllint/
[bdist_wheel]
universal = 1

[flake8]
import-order-style = pep8
application-import-names = pyeit
ignore = E203, E266, E501, W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4,B950
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[metadata]
keywords =
  eit

url = https://github.com/liubenyuan/pyeit
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development
  Topic :: Software Development :: Libraries :: Python Modules

project_urls =
  Download = https://pypi.org/project/pyeit/#files
  Source Code = https://github.com/liubenyuan/pyeit

[options]
zip_safe = False
packages = find:

python_requires = >=3.6

include_package_data = True
install_requires =
  numpy
  scipy
  pandas
  matplotlib
  shapely
  trimesh

test_suite = tests
tests_require =
    {tests_require}

[options.extras_require]
test =
    pytest
    pytest-cov
    tox
    imageio
    
[options.packages.find]
exclude =
  tests
  tests.*

[options.package_data]
pyeit = py.typed, _version.txt, *.pyi

[coverage:run]
relative_files = True

